--- a/Home.html
+++ b/Home.html
@@ -1,1 +1,7 @@
-test
+<head>
+  <meta name="html5" content="empty">
+  <title>Secret and info about Skibidi toilet</title>
+</head>
+<body>
+  ...
+</body>
