--- a/index.html
+++ b/index.html
@@ -12,15 +12,9 @@
 
 <body>
 
- <a href="about:blank"><button>Strange Button</button></a>
- <h1>| Document [RDAC72K826M82]</h1><br>
-<h2>Skibidi Toilet EP 70-3 97%<br><br>EP 70-2 Summary, After the intrusion team enter into the bunker, the scientist feel more afraid and keep his bunker door locked and protected by strong skibidi toilet. After that the intrusion team approaching to defeat the scientist toilet! But... Unfortunately, they lost many of their members. There are now only two left after being attacked by the muted toilet<br><br>EP 70-3 Preview, Black Cameraman and Black Speakerman going to defeat the scientist toilet but the trip going more difficult than expected...</h2><br><br><br>
-
-  <h1>
-    | Document [FPRM729JSLIZL]
-  </h1><h2>
-    Unknown information...
-  </h2>
+ <a href="/home.html"><button>Strange Button</button></a>
+ <h1>| Document [72]</h1><br>
+  No information yet...
 
   <script type="module" src="script.js"></script>
 </body>
