--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
- <a href="/home.html"><button>Strange Button</button></a>
+ <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/Blugray-console.html"><button>Strange Button</button></a>
  <h1>| Document [72]</h1><br>
   No information yet...
 
