--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 </head>
 
 <body>
-
+<h1>welcome to the Blugray's website!</h1>
+  <li><a href="https://linktr.ee/blugray">All socials</a></li>
  <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/Blugray-console.html"><button>Strange Button</button></a>
  <h1>| Document [72]</h1><br>
-  No information yet...
+  Coming soon after 19th March 24<br>
+  More information <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">here!</a>
+  
 
   <script type="module" src="script.js"></script>
 </body>
