--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <h1>welcome to the Blugray's website!</h1>
   <li><a href="https://linktr.ee/blugray"><button>All socials</button></a></li>
- <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/Blugray-console.html"><button>Strange Button</button></a>
+<li><a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/Blugray-console.html"><button>Strange Button</button></a></li>
  <h1>| Document [72]</h1><br>
   Coming soon after 19th March 24<br>
   More information <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">here!</a>
