--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Docs.repl</title>
-  <meta author="Blugray">
-  <meta color="blue">
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blugray's Website</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<h1>welcome to the Blugray's website!</h1>
-  <li><a href="https://linktr.ee/blugray"><button>All socials</button></a></li>
-<li><a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/Blugray-console.html"><button>Strange Button</button></a></li>
- <h1>| Document [72]</h1><br>
-  Coming soon after 19th March 24<br>
-  More information <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">here!</a>
-  
+  <header>
+    <h1>Welcome to Blugray's World</h1>
+    <nav>
+      <ul>
+        <li><a href="https://linktr.ee/blugray">All Socials</a></li>
+        <li><a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/Blugray-console.html">Strange Button</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <script type="module" src="script.js"></script>
+  <main>
+    <section>
+      <h2>Document [72]</h2>
+      <p>Coming soon after March 19, 2024.</p>
+      <p>More information <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">here!</a></p>
+    </section>
+  </main>
+
+  <script src="script.js" defer></script>
 </body>
 
 </html>
