--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Welcome to Blugray's World</h1>
+    <h1>Welcome to Blugray</h1>
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
