--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blugray's Website</title>
+  <title>BlugrayGuy.com</title>
+  <description>Skibidi Toilet Community</description>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,7 +15,7 @@
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-        <li><a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/Blugray-console.html">Strange Button</a></li>
+        <li><a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/Blugray-console.html">Blugray Console</a></li>
       </ul>
     </nav>
   </header>
@@ -25,9 +26,13 @@
       <p>Coming soon after March 19, 2024.</p>
       <p>More information <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">here!</a></p>
     </section>
+    section>
+      <h2>Document [YouTube]</h2>
+      <p>Numbers of subscribers</p>
+      <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed" allowFullScreen></iframe>
+  </section>
   </main>
-
-  <script src="script.js" defer></script>
+  
 </body>
 
 </html>
