--- a/72.html
+++ b/72.html
@@ -1,1 +1,11 @@
-...
+<h1>Skibidi toilet 72</h1>
+<p>coming after: 03/09/24</p>
+<br>
+<h4>Information about:</h4>
+<p>
+  > Type of episodes: short<br>
+  > Environment: unknown yet<br>
+  > duration: ~1/2 minutes <br>
+  > publications: premiere<br>
+  > broadcast in shorts: true<br>
+</p>
