--- a/72.html
+++ b/72.html
@@ -1,3 +1,15 @@
+<head>
+<meta charset="UTF-08">
+<style>
+    body {
+      background-color: lightgoldenrodyellow;
+      color: black;
+    }
+    </style>
+    <title>Information: Skibidi Toilet 72</title>
+</head>
+<body>
+<section>
 <h1>Skibidi toilet 72</h1>
 <p>coming after: 03/09/24</p>
 <br>
@@ -9,3 +21,5 @@
   > publications: premiere<br>
   > broadcast in shorts: true<br>
 </p>
+</section>
+</body>
