--- a/72.html
+++ b/72.html
@@ -2,8 +2,8 @@
 <meta charset="UTF-08">
 <style>
     body {
-      background-color: lightgoldenrodyellow;
-      color: black;
+      background-color: white;
+      color: darkblue;
     }
     </style>
     <title>Information: Skibidi Toilet 72</title>
