--- a/72.html
+++ b/72.html
@@ -4,6 +4,7 @@
     body {
       background-color: white;
       color: darkblue;
+        font-family: Arial, sans-serif;
     }
     </style>
     <title>Information: Skibidi Toilet 72</title>
