--- a/Blugray-console.html
+++ b/Blugray-console.html
@@ -4,22 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blugray Console</title>
-<style>
-.notification {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #4CAF50;
-    color: white;
-    padding: 15px 25px;
-    border-radius: 50px;
-    display: none;
-    z-index: 999;
-}
-</style>
 </head>
-<body onload="showNotification()">
+<body>
 
 <div id="console-text"></div>
 
@@ -30,16 +16,7 @@ const speed = 10;
 let index = 1;
 let textToDisplay = `> Blugray Console\n> V74.0\n\n> Intraverse connection... \n> Connection detected \n> Connection attempt...\n> Connection successful \n  Blugray - Bleak moment\n  Skibidi Toilet - Ending\n  Skibidi toilet 72 - Soon \n  Final War - astro Toilet final war soon...\n  Titan - 3 Ready \n  Temporal error - !?\n  Dark Tie - Complete\n\n> Connected\n\b Login as: User\n\n> Connected Channel:\n\b http://youtube.com/@BlugrayGuy\n\b https://youtube.com/@DaFuq!?Boom!\n  Plan: [Locked]`;
 
-  function showNotification() {
-    var notification = document.createElement('div');
-    notification.classList.add('notification');
-    notification.innerHTML = 'This is a notification';
-    document.body.appendChild(notification);
-
-    setTimeout(function(){
-        notification.style.display = 'none';
-    }, 3000);
-  }
+alert("Warning:\n The page is loaded with blugrayguy@yahoo.com but created by blugrayguy@gmail.com!\n If you not the owner please contact the owner for more information...")
 </script>
 
 </body>
