Set up Blugray-console.html

--- a/Blugray-console.html
+++ b/Blugray-console.html
@@ -16,7 +16,8 @@ const speed = 10;
 let index = 1;
 let textToDisplay = `> Blugray Console\n> V74.0\n\n> Intraverse connection... \n> Connection detected \n> Connection attempt...\n> Connection successful \n  Blugray - Bleak moment\n  Skibidi Toilet - Ending\n  Skibidi toilet 72 - Soon \n  Final War - astro Toilet final war soon...\n  Titan - 3 Ready \n  Temporal error - !?\n  Dark Tie - Complete\n\n> Connected\n\b Login as: User\n\n> Connected Channel:\n\b http://youtube.com/@BlugrayGuy\n\b https://youtube.com/@DaFuq!?Boom!\n  Plan: [Locked]`;
 
-alert("Warning:\n The page is loaded with blugrayguy@yahoo.com but created by blugrayguy@gmail.com!\n If you not the owner please contact the owner for more information...")
+notification("login: BlugrayGuy");
+  displayText();
 </script>
 
 </body>
