--- a/Blugray-console.html
+++ b/Blugray-console.html
@@ -15,7 +15,14 @@
 const speed = 10;
 let index = 1;
 let textToDisplay = `> Blugray Console\n> V74.0\n\n> Intraverse connection... \n> Connection detected \n> Connection attempt...\n> Connection successful \n  Blugray - Bleak moment\n  Skibidi Toilet - Ending\n  Skibidi toilet 72 - Soon \n  Final War - astro Toilet final war soon...\n  Titan - 3 Ready \n  Temporal error - !?\n  Dark Tie - Complete\n\n> Connected\n\b Login as: User\n\n> Connected Channel:\n\b http://youtube.com/@BlugrayGuy\n\b https://youtube.com/@DaFuq!?Boom!\n  Plan: [Locked]`;
-  displayText();
+
+function displayText() {
+    const consoleText = document.getElementById('console-text');
+    setInterval(() => {
+        consoleText.innerHTML += textToDisplay[index++];
+        if (index === textToDisplay.length) clearInterval();
+    }, speed);
+}
 </script>
 
 </body>
