```#console-text {       white-space: pre;       font-family: monospace;       background: linear-gradient(to bottom, lime, #ffff62, yellow);   -webkit-background-clip: text;   color: transparent;   display: inline-block;     } ```

--- a/Blugray-console.html
+++ b/Blugray-console.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blugray Console</title>
+  <style>
+    #console-text {
+      white-space: pre;
+      font-family: monospace;
+      background: black;
+  -webkit-background-clip: text;
+  color: transparent;
+  display: inline-block;
+    }
+  </style>
 </head>
 <body>
 
