--- a/Blugray-console.html
+++ b/Blugray-console.html
@@ -5,12 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blugray Console</title>
   <style>
+    body {
+      background-color: white;
+    }
     #console-text {
       white-space: pre;
       font-family: monospace;
       background: black;
   -webkit-background-clip: text;
-  color: transparent;
+  color: black;
   display: inline-block;
     }
   </style>
