--- a/Blugray-console.html
+++ b/Blugray-console.html
@@ -7,35 +7,33 @@
   <style>
     body {
       background-color: white;
-    }
-    #console-text {
-      white-space: pre;
-      font-family: monospace;
-      background: black;
-  -webkit-background-clip: text;
-  color: black;
-  display: inline-block;
+      color: black;
     }
   </style>
 </head>
 <body>
-
-<div id="console-text"></div>
+> Blugray Console<br>> V74.0<br><br>
+  > Intraverse connection... <br>
+  > Connection detected <br>
+  > Connection attempt...<br>
+  > Connection successful <br>
+     Blugray - Bleak moment<br>
+     Skibidi Toilet - Ending<br>
+     Skibidi toilet 72 - Soon <br>
+     Final War - astro Toilet final war soon...<br>
+     Titan - 3 Ready <br>
+     Temporal error - !?<br>
+     Dark Tie - Complete<br><br>
+     > Connected<br>
+     [] Login as: User<br><br>
+     > Connected Channel:<br>
+     [] http://youtube.com/@BlugrayGuy<br>
+     [] https://youtube.com/@DaFuq!?Boom!<br>
+     Plan: [Locked]`;
 
 <script>
   console.log("login: blugrayguy@gmail.com");
   console.log("login: blugrayguy@yahoo.com");
-const speed = 10;
-let index = 1;
-let textToDisplay = `> Blugray Console\n> V74.0\n\n> Intraverse connection... \n> Connection detected \n> Connection attempt...\n> Connection successful \n  Blugray - Bleak moment\n  Skibidi Toilet - Ending\n  Skibidi toilet 72 - Soon \n  Final War - astro Toilet final war soon...\n  Titan - 3 Ready \n  Temporal error - !?\n  Dark Tie - Complete\n\n> Connected\n\b Login as: User\n\n> Connected Channel:\n\b http://youtube.com/@BlugrayGuy\n\b https://youtube.com/@DaFuq!?Boom!\n  Plan: [Locked]`;
-
-function displayText() {
-    const consoleText = document.getElementById('console-text');
-    setInterval(() => {
-        consoleText.innerHTML += textToDisplay[index++];
-        if (index === textToDisplay.length) clearInterval();
-    }, speed);
-}
 </script>
 
 </body>
