--- a/Blugray-console.html
+++ b/Blugray-console.html
@@ -8,6 +8,7 @@
     body {
       background-color: white;
       color: black;
+      font-family: Arial, sans-serif;
     }
   </style>
 </head>
@@ -29,7 +30,7 @@
      > Connected Channel:<br>
      [] http://youtube.com/@BlugrayGuy<br>
      [] https://youtube.com/@DaFuq!?Boom!<br>
-     Plan: [Locked]`;
+     Plan: [Locked]
 
 <script>
   console.log("login: blugrayguy@gmail.com");
