--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <section>
       <h2>Document [YouTube]</h2>
       <p>Numbers of subscribers</p>
-      <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed" allowFullScreen></iframe>
+      <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" allowFullScreen></iframe>
+      <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D&graph=true" allowFullScreen></iframe>
   </section>
   </main>
   
