--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   </header>
 
   <main>
-
+<section>
     <div class="slideshow">
   <div class="slide">
-    <img src="image1.jpg" alt="beta">
+    <img src="https://yt3.ggpht.com/60OUbU-3NdFVzeDH3tPiu-oXtG_tFXkGg5MmnIxRjipR2-ijXabRuzKxXpohdk8Qm2KJc39bpeU=s88-c-k-c0x00ffffff-no-rj" alt="beta">
     <div class="prose">
       <h2>Open now!</h2>
       <p>Skibidi Toilet by Blugray</p>
@@ -32,7 +32,7 @@
   </div>
 
   <div class="slide">
-    <img src="image2.jpg" alt="72">
+    <img src="https://external-preview.redd.it/skibidi-toilet-72-leak-yes-this-was-made-by-dafuq-boom-v0-bjBvZHR0bTZ4MW1jMTh1K47NxOFceWCiEBhagkCXN_U7mDOfzUEQUqh5Ab92.png?format=pjpg&auto=webp&s=88a32172e5466b1a83a9498df7057f859faa4c03" alt="72">
     <div class="prose">
       <h2>Soon</h2>
       <p>Skibidi Toilet 72</p>
@@ -46,7 +46,7 @@
   <a href="#" class="prev">&#10094;</a>
   <a href="#" class="next">&#10095;</a>
     </div>
-    
+</section>
     <section>
       <h2>Document [72]</h2>
       <p>Coming soon after March 09, 2024.</p>
