--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <main>
 <section>
+  <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
     <img src="https://yt3.ggpht.com/60OUbU-3NdFVzeDH3tPiu-oXtG_tFXkGg5MmnIxRjipR2-ijXabRuzKxXpohdk8Qm2KJc39bpeU=s88-c-k-c0x00ffffff-no-rj" alt="beta">
@@ -39,6 +40,15 @@
       <a href="about:blank">Soon</a>
     </div>
   </div>
+
+      <div class="slide">
+    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214595415044001802/Screenshot_2024-03-05-16-28-07-162_dev.beefers.vendetta-edit.jpg?ex=65f9af21&is=65e73a21&hm=443585a51f467c7e9aa5f394e71e549c3e8ce43158710d34cb160b471588869a&" alt="Blugray Discord server">
+    <div class="prose">
+      <h2>Blugray Official Discord Server</h2>
+      <p>Click the button below to join!</p>
+      <a href="about:blank">Join the server now!</a>
+    </div>
+      </div>
 
   <!-- more show if needed -->
 
