--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="prose">
       <h2>Blugray Official Discord Server</h2>
       <p>Click the button below to join!</p>
-      <a href="about:blank">Join the server now!</a>
+      <a href="https://discord.com/invite/KURTKUq7ud">Join the server now!</a>
     </div>
       </div>
 
