--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ var slideIndex = 0;
     slideIndex++;
     if (slideIndex > slides.length) {slideIndex = 1}
     slides[slideIndex-1].style.display = "block";
-    setTimeout(showSlides, 5000); // Change l'image toutes les 2 secondes
+    setTimeout(showSlides, 5000);
   }
 </script>
 
