--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://yt3.ggpht.com/60OUbU-3NdFVzeDH3tPiu-oXtG_tFXkGg5MmnIxRjipR2-ijXabRuzKxXpohdk8Qm2KJc39bpeU=s88-c-k-c0x00ffffff-no-rj" alt="beta">
+    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214631601405698089/Picsart_24-03-05_18-49-48-399.jpg?ex=65f9d0d4&is=65e75bd4&hm=0b17d998dfa690ee0b3b1baa197a3a7d41403abad896634ecafc4b85b731bb9e&" alt="beta">
     <div class="prose">
       <h2>Open now!</h2>
       <p>Skibidi Toilet by Blugray</p>
-      <p>● ○ ○</p>
+      <p>● ○ ○ ○</p>
     </div>
   </div>
 
@@ -39,19 +39,28 @@
       <h2>Soon</h2>
       <p>Skibidi Toilet 72</p>
       <a href="about:blank">Soon</a>
-      <p>○ ● ○</p>
+      <p>○ ● ○ ○</p>
     </div>
   </div>
 
       <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214595415044001802/Screenshot_2024-03-05-16-28-07-162_dev.beefers.vendetta-edit.jpg?ex=65f9af21&is=65e73a21&hm=443585a51f467c7e9aa5f394e71e549c3e8ce43158710d34cb160b471588869a&" alt="Blugray Discord server">
+    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214631600751509504/Picsart_24-03-05_18-52-00-585.jpg?ex=65f9d0d4&is=65e75bd4&hm=e501b0e3d87d48c19957725380b474b0d3e32bd2ccaa65a07370794a106fa2ac&" alt="Blugray Discord server">
     <div class="prose">
       <h2>Blugray Official Discord Server</h2>
       <p>Click the button below to join!</p>
       <a href="https://discord.com/invite/KURTKUq7ud">Join the server now!</a>
-      <p>○ ○ ●</p>
+      <p>○ ○ ● ○</p>
     </div>
       </div>
+
+      <div class="slide">
+    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214631601024274472/Picsart_24-03-05_18-50-30-951.jpg?ex=65f9d0d4&is=65e75bd4&hm=c7dc945ef4154611e518e04661c98e239504220afec8b52fdc8908238ce29c41&" alt="Season 23">
+    <div class="prose">
+      <h2>Out now!</h2>
+      <p>skibidi toilet - season 23 (all episodes)</p>
+      <a href="https://youtu.be/vIOqFFXPh10">Watch</a>
+      <p>○ ○ ○ ●</p>
+    </div>
 
   <!-- more show if needed -->
 
