--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="prose">
       <h2>Soon</h2>
       <p>Skibidi Toilet 72</p>
-      <a href="about:blank">Soon</a>
+      <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">Soon</a>
       <p>○ ● ○ ○</p>
     </div>
   </div>
