--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1>Welcome to Blugray</h1>
+    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214636551384989787/Picsart_24-03-05_19-11-38-848.png?ex=65f9d570&is=65e76070&hm=c64fd5a1a64ab9a286d46b4d62ccebfc18d84970ddcb990a4226200fd70aab08&" alt="BlugrayGuy.com">
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
