--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214637789878943814/Picsart_24-03-05_19-16-43-028.png?ex=65f9d697&is=65e76197&hm=60f794f9e03fb6c59d19d5801749a9f21590c87caa8ce069f512326e164eaa0b&" alt="BlugrayGuy.com">
+    <a href="https://blugrayguylegit.github.io/Skibidi-toilet-community/"><img src="https://media.discordapp.net/attachments/1169330015423430696/1214637789878943814/Picsart_24-03-05_19-16-43-028.png?ex=65f9d697&is=65e76197&hm=60f794f9e03fb6c59d19d5801749a9f21590c87caa8ce069f512326e164eaa0b&" alt="BlugrayGuy.com"></a>
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
