--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <a href="https://blugrayguylegit.github.io/Skibidi-toilet-community/"><img src="https://media.discordapp.net/attachments/1169330015423430696/1214637789878943814/Picsart_24-03-05_19-16-43-028.png?ex=65f9d697&is=65e76197&hm=60f794f9e03fb6c59d19d5801749a9f21590c87caa8ce069f512326e164eaa0b&" alt="BlugrayGuy.com"></a>
+    <a href="https://blugrayguylegit.github.io/Skibidi-toilet-community/"><img src="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&" alt="BlugrayGuy.com"></a>
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
@@ -34,11 +34,11 @@
   </div>
 
   <div class="slide">
-    <img src="https://external-preview.redd.it/skibidi-toilet-72-leak-yes-this-was-made-by-dafuq-boom-v0-bjBvZHR0bTZ4MW1jMTh1K47NxOFceWCiEBhagkCXN_U7mDOfzUEQUqh5Ab92.png?format=pjpg&auto=webp&s=88a32172e5466b1a83a9498df7057f859faa4c03" alt="72">
+    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214631601854480385/skibidi-toilet-72-leak-yes-this-was-made-by-dafuq-boom-v0-bjBvZHR0bTZ4MW1jMTh1K47NxOFceWCiEBhagkCXN_U7mDOfzUEQUqh5Ab92.jpg?ex=65f9d0d4&is=65e75bd4&hm=26aae2b20f85ec6abd6882d5add256eff6a874d3e6ab7116ac253d9139a052b4&" alt="72">
     <div class="prose">
-      <h2>Soon</h2>
+      <h2>Coming soon...</h2>
       <p>Skibidi Toilet 72</p>
-      <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">Soon</a>
+      <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">Coming soon... • Access to information </a>
       <p>○ ● ○ ○</p>
     </div>
   </div>
