--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <div class="slide">
     <img src="https://media.discordapp.net/attachments/1169330015423430696/1214631601405698089/Picsart_24-03-05_18-49-48-399.jpg?ex=65f9d0d4&is=65e75bd4&hm=0b17d998dfa690ee0b3b1baa197a3a7d41403abad896634ecafc4b85b731bb9e&" alt="beta">
     <div class="prose">
-      <h2>Open now!</h2>
-      <p>Skibidi Toilet by Blugray</p>
+      <p>Open now!</p>
+      <h2>Skibidi Toilet by Blugray</h2>
       <p>● ○ ○ ○</p>
     </div>
   </div>
@@ -36,19 +36,19 @@
   <div class="slide">
     <img src="https://media.discordapp.net/attachments/1169330015423430696/1214631601854480385/skibidi-toilet-72-leak-yes-this-was-made-by-dafuq-boom-v0-bjBvZHR0bTZ4MW1jMTh1K47NxOFceWCiEBhagkCXN_U7mDOfzUEQUqh5Ab92.jpg?ex=65f9d0d4&is=65e75bd4&hm=26aae2b20f85ec6abd6882d5add256eff6a874d3e6ab7116ac253d9139a052b4&" alt="72">
     <div class="prose">
-      <h2>Coming soon...</h2>
-      <p>Skibidi Toilet 72</p>
+      <p>Coming soon...</p>
+      <h2>Skibidi Toilet 72</h2>
       <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">Coming soon... • Access to information </a>
       <p>○ ● ○ ○</p>
     </div>
   </div>
 
       <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214631600751509504/Picsart_24-03-05_18-52-00-585.jpg?ex=65f9d0d4&is=65e75bd4&hm=e501b0e3d87d48c19957725380b474b0d3e32bd2ccaa65a07370794a106fa2ac&" alt="Blugray Discord server">
+    <img src="https://dafuqboom.shop/cdn/shop/files/Screenshot_2024-02-26_at_10.16.01_AM.png?v=1708971398&width=2600" alt="71">
     <div class="prose">
-      <h2>Blugray Official Discord Server</h2>
-      <p>Click the button below to join!</p>
-      <a href="https://discord.com/invite/KURTKUq7ud">Join the server now!</a>
+      <p>Out now!</p>
+      <h2>Skibidi Toilet 71</h2>
+      <a href="https://youtu.be/aFvw_yu0N3A?list=TLGGU0Ng1a1kngEwNTAzMjAyNA">Watch now!</a>
       <p>○ ○ ● ○</p>
     </div>
       </div>
@@ -56,9 +56,9 @@
       <div class="slide">
     <img src="https://media.discordapp.net/attachments/1169330015423430696/1214631601024274472/Picsart_24-03-05_18-50-30-951.jpg?ex=65f9d0d4&is=65e75bd4&hm=c7dc945ef4154611e518e04661c98e239504220afec8b52fdc8908238ce29c41&" alt="Season 23">
     <div class="prose">
-      <h2>Out now!</h2>
-      <p>skibidi toilet - season 23 (all episodes)</p>
-      <a href="https://youtu.be/vIOqFFXPh10">Watch</a>
+      <p>Out now!</p>
+      <h2>skibidi toilet - season 23 (all episodes)</h2>
+      <a href="https://youtu.be/vIOqFFXPh10">Watch now!</a>
       <p>○ ○ ○ ●</p>
     </div>
 
