--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>BlugrayGuy.com</title>
   <description>------ Skibidi Toilet Community Official | BlugrayGuy</description>
   <link rel="stylesheet" href="style.css">
+  <meta property="og:title" content="Skibidi Toilet Community by blugrayGuy">
+    <meta property="og:description" content="Skibidi Toilet Community by blugrayGuy is a website of secret about skibidi toilet and some information about Skibidi toilet and blugray...">
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&"
 </head>
 
 <body>
