--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BlugrayGuy.com</title>
   <description>------ Skibidi Toilet Community Official | BlugrayGuy</description>
-  <link rel="stylesheet" href="style.css">
   <meta property="title" content="Skibidi Toilet Community by blugrayGuy">
     <meta property="description" content="Skibidi Toilet Community by blugrayGuy is a website of secret about skibidi toilet and some information about Skibidi toilet and blugray...">
-    <meta property="image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&"
+    <meta property="image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&" alt="home">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
   </div>
 
   <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214631601854480385/skibidi-toilet-72-leak-yes-this-was-made-by-dafuq-boom-v0-bjBvZHR0bTZ4MW1jMTh1K47NxOFceWCiEBhagkCXN_U7mDOfzUEQUqh5Ab92.jpg?ex=65f9d0d4&is=65e75bd4&hm=26aae2b20f85ec6abd6882d5add256eff6a874d3e6ab7116ac253d9139a052b4&" alt="72">
+    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214902579281002566/skibidi_toilet_72_troll_leaks.gif?ex=65facd32&is=65e85832&hm=7e105f3319b89929f872907246e4bff4668cd0983064cdbabec6047b2e330e35&" alt="72">
     <div class="prose">
       <p>Coming soon...</p>
       <h2>Skibidi Toilet 72</h2>
@@ -78,7 +78,8 @@
     <section>
       <h2>Document [YouTube]</h2>
       <p>Numbers of subscribers</p>
-      <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" allowFullScreen></iframe>
+      <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" allowFullScreen></iframe><br>
+        <h4>Goal -> 900 and 1000</h4>
   </section>
   </main>
   
