--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214631601405698089/Picsart_24-03-05_18-49-48-399.jpg?ex=65f9d0d4&is=65e75bd4&hm=0b17d998dfa690ee0b3b1baa197a3a7d41403abad896634ecafc4b85b731bb9e&" alt="beta">
+    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214907074123792454/Screenshot_2024-03-05-18-35-06-339_com.picsart.studio-edit.jpg?ex=65fad162&is=65e85c62&hm=1df1373d990c049c44bc5be7e69343324f5667d0fae9246cae6c928bcd1cc22e&" alt="You weren't supposed to die">
     <div class="prose">
-      <p>Open now!</p>
-      <h2>Skibidi Toilet by Blugray</h2>
+      <p>Out now!</p>
+      <h2>You weren't supposed to die...</h2>
+      <a href="https://youtu.be/AkmIyykLVAU">Watch now!</a>
       <p>● ○ ○ ○</p>
     </div>
   </div>
