--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="theme-color" content="#0000FF">
     <meta property="og:type" content="website">
     <meta property="og:title" content="BlugrayGuy.com">
+    <meta property="og:description" content="Skibidi Toilet Community by blugrayGuy is a website of secret about skibidi toilet and some information about Skibidi toilet and blugray...">
     <meta property="og:site_name" content="BlugrayGuy.com">
     <meta property="fb:title" content="BlugrayGuy.com">
     <meta name="twitter:title" content="BlugrayGuy.com">
