--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="description" content="Skibidi Toilet Community by blugrayGuy is a website of secret about skibidi toilet and some information about Skibidi toilet and blugray...">
     <meta property="icon" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&" alt="home">
     <meta property="og:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&">
-    <link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/1169330015423430696/1214915589861281843/Picsart_24-03-06_13-40-27-453.png?ex=65fad950&is=65e86450&hm=1f83e09bbb221e9931b5e160795adbadb060cc652ce7e46c30b42e0b0f6036ab&">
+    <link rel="shortcut icon" type="image/png" href="https://media.discordapp.net/attachments/1169330015423430696/1214915589861281843/Picsart_24-03-06_13-40-27-453.png?ex=65fad950&is=65e86450&hm=1f83e09bbb221e9931b5e160795adbadb060cc652ce7e46c30b42e0b0f6036ab&">
     <link rel="apple-touch-icon" href="https://media.discordapp.net/attachments/1169330015423430696/1214915589861281843/Picsart_24-03-06_13-40-27-453.png?ex=65fad950&is=65e86450&hm=1f83e09bbb221e9931b5e160795adbadb060cc652ce7e46c30b42e0b0f6036ab&">
     <meta name="theme-color" content="#0000FF">
     <meta property="og:type" content="website">
