--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <description>------ Skibidi Toilet Community Official | BlugrayGuy</description>
   <meta property="title" content="Skibidi Toilet Community by blugrayGuy">
     <meta property="description" content="Skibidi Toilet Community by blugrayGuy is a website of secret about skibidi toilet and some information about Skibidi toilet and blugray...">
-    <meta property="image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&" alt="home">
+    <meta property="icon" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&" alt="home">
     <meta property="og:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&">
     <link rel="shortcut icon" type="image/png" href="https://media.discordapp.net/attachments/1169330015423430696/1214915589861281843/Picsart_24-03-06_13-40-27-453.png?ex=65fad950&is=65e86450&hm=1f83e09bbb221e9931b5e160795adbadb060cc652ce7e46c30b42e0b0f6036ab&">
     <link rel="apple-touch-icon" href="https://media.discordapp.net/attachments/1169330015423430696/1214915589861281843/Picsart_24-03-06_13-40-27-453.png?ex=65fad950&is=65e86450&hm=1f83e09bbb221e9931b5e160795adbadb060cc652ce7e46c30b42e0b0f6036ab&">
@@ -60,7 +60,7 @@
   </div>
 
       <div class="slide">
-    <img src="https://dafuqboom.shop/cdn/shop/files/Screenshot_2024-02-26_at_10.16.01_AM.png?v=1708971398&width=2600" alt="71">
+    <img src="https://media.discordapp.net/attachments/1169330015423430696/1214956091117543515/Picsart_24-03-06_16-19-44-975.png?ex=65faff08&is=65e88a08&hm=e0e44f5290e86691b85e6f6a280ece2ed576e1d102c12465d2477e26a95cce5e&" alt="71">
     <div class="prose">
       <p>Out now!</p>
       <h2>Skibidi Toilet 71</h2>
@@ -87,6 +87,13 @@
       <h2>Document [72]</h2>
       <p>Coming soon after March 09, 2024.</p>
       <p>More information <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">here!</a></p>
+    </section>
+    <section>
+      <h2>Document [#blugrayguy]</h2>
+      <p>#blugrayguy is a hashtag started by Blugray himself, this hashtag aims for people to use it and blugray makes a dedication to them in return, he created this hashtag for fun no project behind it is planned...</p>
+      <p>
+        this hashtag you can use it anywhere and at any time but there are conditions,<br><br> - in blugray comments (no conditions),<br> - in a video (blugray mentions with @BlugrayGuy),<br> - in a post (mentions of blugray with @BlugrayGuy),<br> - in the comment of a blugray video (no conditions),<br> - in the comments of another video (informed blugray of this...).
+      </p>
     </section>
     <section>
       <h2>Document [YouTube]</h2>
