--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="description" content="Skibidi Toilet Community by blugrayGuy is a website of secret about skibidi toilet and some information about Skibidi toilet and blugray...">
     <meta property="icon" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&" alt="home">
     <meta property="og:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&">
-    <link rel="shortcut icon" type="image/png" href="https://media.discordapp.net/attachments/1169330015423430696/1214915589861281843/Picsart_24-03-06_13-40-27-453.png?ex=65fad950&is=65e86450&hm=1f83e09bbb221e9931b5e160795adbadb060cc652ce7e46c30b42e0b0f6036ab&">
-    <link rel="apple-touch-icon" href="https://media.discordapp.net/attachments/1169330015423430696/1214915589861281843/Picsart_24-03-06_13-40-27-453.png?ex=65fad950&is=65e86450&hm=1f83e09bbb221e9931b5e160795adbadb060cc652ce7e46c30b42e0b0f6036ab&">
+    <link rel="shortcut icon" type="image/png" href="https://media.discordapp.net/attachments/662665566200528906/1215021749352005662/Picsart_24-03-06_20-32-28-353.png?ex=65fb3c2f&is=65e8c72f&hm=75577cf9e5783dd6366d974f5b604c05953d964a59616c203a54eca275b9141d&">
+    <link rel="apple-touch-icon" href="https://media.discordapp.net/attachments/662665566200528906/1215021749352005662/Picsart_24-03-06_20-32-28-353.png?ex=65fb3c2f&is=65e8c72f&hm=75577cf9e5783dd6366d974f5b604c05953d964a59616c203a54eca275b9141d&">
     <meta name="theme-color" content="#0000FF">
     <meta property="og:type" content="website">
     <meta property="og:title" content="BlugrayGuy.com">
@@ -26,7 +26,7 @@
 
 <body>
   <header>
-    <a href="https://blugrayguylegit.github.io/Skibidi-toilet-community/"><img src="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&" alt="BlugrayGuy.com"></a>
+    <a href="https://blugrayguylegit.github.io/Skibidi-toilet-community/"><img src="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&""" alt="BlugrayGuy.com"></a>
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
@@ -99,7 +99,9 @@
       <h2>Document [YouTube]</h2>
       <p>Numbers of subscribers</p>
       <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" allowFullScreen></iframe><br>
-        <h4>Goal -> 900 and 1000</h4>
+        <h4>Goal -> 900 and 1000</h4><br><br>
+        <h2>last video</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/AkmIyykLVAU?si=x7u81Qg7QH1fd8pw&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen alt="BlugrayGuy"></iframe>
   </section>
   </main>
   
