--- a/index.html
+++ b/index.html
@@ -103,8 +103,49 @@
         <h2>last video</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/AkmIyykLVAU?si=x7u81Qg7QH1fd8pw&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen alt="BlugrayGuy"></iframe>
   </section>
+  <section>
+    <div class="tie">
+      <h1>
+        All tie of blugray all of all universe... (and bonus)
+      </h1>
+      <section>
+        <h2>
+          Gray and black tie (skibidi toilet)
+        </h2>
+    <img src="https://media.discordapp.net/attachments/662665566200528906/1215259217737424936/Screenshot_2024-02-18-01-19-26-893_dev.beefers.vendetta-edit.jpg?ex=65fc1957&is=65e9a457&hm=aeea551e4f4080e00062617da9624acb3f37cf384016e4ec8e247b9692c08d1a&" alt="Gray and black tie 1" id="tie">
+    <img src="https://media.discordapp.net/attachments/662665566200528906/1215259218039410728/IMG_20240211_134420_101.jpg?ex=65fc1958&is=65e9a458&hm=cf9cf435aaaef62fa22cb95e1f869c284faa7046f438184e87d7e80532763691&" alt="gray and black 2" id="tie">
+    </section>
+    <section>
+      <p><b>
+        Dark Tie
+      </p>
+      <img src="https://media.discordapp.net/attachments/662665566200528906/1215259218383216651/Blugray_-_Demand_1.png?ex=65fc1958&is=65e9a458&hm=4e32de849a7714904ddd03db1011cfcffc52b7fb412d8bc8f512daf2e3da226b&" alt="Dark Tie" id="tie">
+      <p>
+        Red tie
+      </p>
+<img src="https://media.discordapp.net/attachments/662665566200528906/1215259218752577566/Screenshot_2024-01-15-18-54-31-393_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=e4000510458a877e0b629cd5d68b94c566f18e9478b2f11ffa79fcbe77a5e5cc&" alt="Red tie" id="tie">
+<p>
+  Yellow tie
+</p>
+<img src="https://media.discordapp.net/attachments/662665566200528906/1215259219155226634/Screenshot_2024-01-15-18-54-13-563_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=cdc8fc2493390555a83a6fa16dcc1d4c11d850f4c15a41687a70ca9a263dc655&" alt="Yellow tie" id="tie">
+<p>
+  Gray tie
+</p>
+<img src="https://media.discordapp.net/attachments/662665566200528906/1215259219469664266/Screenshot_2024-01-15-18-53-48-621_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=4c0b309485e89dbea9cef469d1311fb9163c955cec21a291226161b4d4df53cd&" alt="Gray Tie" id="tie">
+    </section>
+    <section>
+      <p>
+        Epic Blugray and normal blugray
+      </p>
+<img src="https://media.discordapp.net/attachments/662665566200528906/1215259220002209812/Screenshot_2024-01-15-18-53-16-163_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=bbabf5cee01cd85e6cb525274ba3234875a5a320b3875e5073fec41fbfa76ff8&" alt="Epic Blugray" id="tie">
+  <<img src="https://media.discordapp.net/attachments/662665566200528906/1215259219754749972/Screenshot_2024-01-15-18-53-30-695_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=dbd789b617e19bf5455626478132bc6f6c1b445cb7a720ccc589e4db1555deba&" alt="Normal Blugray" id="tie"></b>
+    </section>
+    </div>
+  </section>
   </main>
-  
+  <div class="floating-video">
+  <iframe width="300" height="200" src="https://www.youtube.com/embed/vIOqFFXPh10?autoplay=0" frameborder="0" allowfullscreen></iframe>
+</div>
 </body>
 <script>
 var slideIndex = 0;
