--- a/72.html
+++ b/72.html
@@ -1,26 +1,35 @@
 <head>
 <meta charset="UTF-08">
-<style>
-    body {
-      background-color: white;
-      color: darkblue;
-        font-family: Arial, sans-serif;
-    }
-    </style>
+<link rel="stylesheet" href="style.css">
     <title>Information: Skibidi Toilet 72</title>
 </head>
 <body>
 <section>
+  <section id="uptitle">
 <h1>Skibidi toilet 72</h1>
 <p>coming after: 03/09/24</p>
+  </section>
 <br>
+<section>
 <h4>Information about:</h4>
 <p>
   > Type of episodes: short<br>
   > Environment: unknown yet<br>
   > duration: ~1/2 minutes <br>
   > publications: premiere<br>
-  > broadcast in shorts: true<br>
+  > shorts version: true<br>
+  > new character: maybe<br>
+  > more information coming soon...
 </p>
+</section>
+<br>
+<section id="about">
+  <h1>Information about the episode</h1>
+    <p>
+      <li>While the <b>Titans</b> are on the hunt of the <b>Gman</b> who is also being pursued by the <b>Astro Toilet</b>, the <b>alliance</b> is preparing for <i>something...</i></li>
+<li><b>Gray Servitor</b> known as <b>Lucky Cameraman</b> must convince the <b>alliance</b> to follow his still unknown plan.</li>
+<li>A <b>new character</b> will <i>appear but who will they be?</i> You will find out in <b>episode 72...</b></li>
+<li>However <b>Blugray</b> know as the <i>Secret Agent</i> observes the work of his <b>servant (Lucky Cameraman)</b> doing what he must do.</li>
+</section>
 </section>
 </body>
