--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-        <li><a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/Blugray-console.html">Blugray Console</a></li>
+        <li><a href="Blugray-console.html">Blugray Console</a></li>
       </ul>
     </nav>
   </header>
@@ -86,7 +86,7 @@
     <section>
       <h2>Document [72]</h2>
       <p>Coming soon after March 09, 2024.</p>
-      <p>More information <a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/72.html">here!</a></p>
+      <p>More information <a href="72.html">here!</a></p>
     </section>
     <section>
       <h2>Document [#blugrayguy]</h2>
