--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         Epic Blugray and normal blugray
       </p>
 <img src="https://media.discordapp.net/attachments/662665566200528906/1215259220002209812/Screenshot_2024-01-15-18-53-16-163_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=bbabf5cee01cd85e6cb525274ba3234875a5a320b3875e5073fec41fbfa76ff8&" alt="Epic Blugray" id="tie">
-  <<img src="https://media.discordapp.net/attachments/662665566200528906/1215259219754749972/Screenshot_2024-01-15-18-53-30-695_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=dbd789b617e19bf5455626478132bc6f6c1b445cb7a720ccc589e4db1555deba&" alt="Normal Blugray" id="tie"></b>
+  <img src="https://media.discordapp.net/attachments/662665566200528906/1215259219754749972/Screenshot_2024-01-15-18-53-30-695_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=dbd789b617e19bf5455626478132bc6f6c1b445cb7a720ccc589e4db1555deba&" alt="Normal Blugray" id="tie"></b>
     </section>
     </div>
   </section>
