--- a/72.html
+++ b/72.html
@@ -1,6 +1,14 @@
 <head>
 <meta charset="UTF-08">
 <link rel="stylesheet" href="style.css">
+    <style>
+        section#about {
+  background-color: floralwhite;
+}
+section#uptitle {
+  color: darkblue;
+}
+    </style>
     <title>Information: Skibidi Toilet 72</title>
 </head>
 <body>
