--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-        <li><a href="Blugray-console.html">Blugray Console</a></li>
+        <li><a href="https://BlugrayGuyLegit.github.io/Skibidi-toilet-community/Blugray-console.html">Blugray Console</a></li>
       </ul>
     </nav>
   </header>
@@ -88,6 +88,11 @@
       <p>Coming soon after March 09, 2024.</p>
       <p>More information <a href="72.html">here!</a></p>
     </section>
+      <section>
+      <h2>Document [Dark Tie]</h2>
+      <p>Information about The Dark tie</p>
+      <p>The Dark Tie is a tie like all others tie exist but more strange, creepy and very dark... The Dark Tie is a secret tie there never appeared before but if you want more information <a href="dtst.html">click here !</a></p>
+    </section>
     <section>
       <h2>Document [#blugrayguy]</h2>
       <p>#blugrayguy is a hashtag started by Blugray himself, this hashtag aims for people to use it and blugray makes a dedication to them in return, he created this hashtag for fun no project behind it is planned...</p>
@@ -138,7 +143,7 @@
         Epic Blugray and normal blugray
       </p>
 <img src="https://media.discordapp.net/attachments/662665566200528906/1215259220002209812/Screenshot_2024-01-15-18-53-16-163_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=bbabf5cee01cd85e6cb525274ba3234875a5a320b3875e5073fec41fbfa76ff8&" alt="Epic Blugray" id="tie">
-  <img src="https://media.discordapp.net/attachments/662665566200528906/1215259219754749972/Screenshot_2024-01-15-18-53-30-695_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=dbd789b617e19bf5455626478132bc6f6c1b445cb7a720ccc589e4db1555deba&" alt="Normal Blugray" id="tie"></b>
+  <<img src="https://media.discordapp.net/attachments/662665566200528906/1215259219754749972/Screenshot_2024-01-15-18-53-30-695_app.rvx.android.youtube-edit.jpg?ex=65fc1958&is=65e9a458&hm=dbd789b617e19bf5455626478132bc6f6c1b445cb7a720ccc589e4db1555deba&" alt="Normal Blugray" id="tie"></b>
     </section>
     </div>
   </section>
