--- a/dtst.html
+++ b/dtst.html
@@ -11,7 +11,7 @@
 <body>
 <header>
   <h1>
-    Dark Tie
+    <a href="https://blugrayguylegit.github.io/Skibidi-toilet-community/">Dark Tie</a>
   </h1>
   <p>
     The truth about Dark Tie lore...
