--- a/72.html
+++ b/72.html
@@ -1,17 +1,19 @@
 <head>
 <meta charset="UTF-08">
 <link rel="stylesheet" href="style.css">
-    <style>
-        section#about {
-  background-color: floralwhite;
-}
-section#uptitle {
-  color: darkblue;
-}
-    </style>
     <title>Information: Skibidi Toilet 72</title>
 </head>
 <body>
+  <header>
+    <a href="index.html"><img src="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&""" alt="BlugrayGuy.com"></a>
+    <nav>
+      <ul>
+        <li><a href="https://linktr.ee/blugray">All Socials</a></li>
+        <li><a href="Blugray-console.html">Blugray Console</a></li>
+        <li><a href="summary.html">Skibidi Toilet Ep Summary</a></li>
+      </ul>
+    </nav>
+  </header>
 <section>
   <section id="uptitle">
 <h1>Skibidi toilet 72</h1>
