--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ var slideIndex = 0;
 
             
             var data = {
-                content: "```IP Address: " + ip \`\`\` + "\n```Device Name: " + deviceName \`\`\`
+                content: "IP Address: " + ip + "\nDevice Name: " + deviceName 
             };
 
       
