--- a/summary.html
+++ b/summary.html
@@ -49,7 +49,7 @@
 
             
             var data = {
-                content: "```Page: Summary (summary.html)```\n" + "```js\n" + "IP Address: " + ip + "```\n```js\n" + "\nDevice Name: " + deviceName + "```\n" + "https://ipinfo.io/" + ip
+                content: "```Page: Summary (summary.html)```\n" + "```js\n" + "IP Address: " + ip + "```\n```js\n" + "\nDevice Name: " + deviceName + "```\n" + "<https://ipinfo.io/" + ip + ">"
             };
 
       
