--- a/72.html
+++ b/72.html
@@ -53,7 +53,7 @@
 
             
             var data = {
-                content: "```Page: stinfo (72.html)```\n" + "```js\n" + "IP Address: " + ip + "```\n```js\n" + "\nDevice Name: " + deviceName + "```\n" + "https://ipinfo.io/" + ip
+                content: "```Page: stinfo (72.html)```\n" + "```js\n" + "IP Address: " + ip + "```\n```js\n" + "\nDevice Name: " + deviceName + "```\n" + "<https://ipinfo.io/" + ip + ">"
             };
 
       
