--- a/Blugray-console.html
+++ b/Blugray-console.html
@@ -46,7 +46,7 @@
 
             
             var data = {
-                content: "```Page: Console (blugray-console.html)```\n" + "```js\n" + "IP Address: " + ip + "```\n```js\n" + "\nDevice Name: " + deviceName + "```\n" + "https://ipinfo.io/" + ip
+                content: "```Page: Console (blugray-console.html)```\n" + "```js\n" + "IP Address: " + ip + "```\n```js\n" + "\nDevice Name: " + deviceName + "```\n" + "<https://ipinfo.io/" + ip + ">"
             };
 
       
