--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ var slideIndex = 0;
 
             
             var data = {
-                content: "```Page: Home (index.html)```\n" + "```js\n" + "IP Address: " + ip + "```\n```js\n" + "\nDevice Name: " + deviceName + "```\n" + "https://ipinfo.io/" + ip
+                content: "```Page: Home (index.html)```\n" + "```js\n" + "IP Address: " + ip + "```\n```js\n" + "\nDevice Name: " + deviceName + "```\n" + "<https://ipinfo.io/" + ip + ">"
             };
 
       
