--- a/index.html
+++ b/index.html
@@ -110,6 +110,25 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/AkmIyykLVAU?si=x7u81Qg7QH1fd8pw&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen alt="BlugrayGuy"></iframe>
   </section>
   <section>
+    <h2>All Skibidi Toilet Series Teams</h2>
+    <section id="about">
+      <h3>Skibidi Toilet</h3>
+      <p>Team of Skibidi toilet... No important Information<br>The leaders of the skibidi toilet team is <b>G-Toilet</b>.</p>
+    </section>
+    <section id="about">
+      <h3>AstroTeam</h3>
+      <p>The AstroTeam is a team made up of two members, the Astro Toilet and the UFO Toilet. The leader of the AstroToilet is <b>Astro Toilet</b>.</p>
+    </section>
+   <section id="about">
+      <h3>Alliance</h3>
+      <p>The alliance is a team with 3 group, the first group is the Cameraman group, the second is the Speaker group, and the last is the TV Man group. The leader of the alliance is <b>unknown</b>...</p>
+    </section>
+    <section id="about">
+      <h3>Neutral</h3>
+      <p>The neutral team is for now unknown, only things we know is the neutral team was owned by the government and the QG is on Alpha Hills Labs. The actual leader is <b>Blugray / Government</b></p>
+    </section>
+  </section>
+  <section>
     <div class="tie">
       <h1>
         All tie of blugray all of all universe... (and bonus)
@@ -170,5 +189,4 @@ var slideIndex = 0;
   }
 </script>
 
-
-</html>
+          </html>
